# tensegrity-open-claw

./: .gitignore  DESIGN.md  LICENSE  README.md  attach.sh  deploy.sh  export-esp.sh  open-claw.qxw  remote-deploy.sh
brain/: ACCESS.md  Cargo.toml  brain.service
brain/src/: audio.rs  capture.rs  clock.rs  config.rs  control.rs  dmx.rs  dmx_hat.rs  dsp.rs  features.rs  fixture.rs  laser.rs  latest.rs  main.rs  mapping.rs  orchestrator.rs  perlin.rs  recorder.rs  sacn.rs  sparkle.rs  spectral.rs
brain/src/audio_features/: mod.rs  pipeline.rs
ponytail/: Cargo.toml  README.md  attach.sh  export-esp.sh
ponytail/.cargo/: config.toml
ponytail/.zed/: settings.json
ponytail/src/: ble.rs  config.rs  filter.rs  http_server.rs  led_fixture.rs  main.rs  metrics.rs  models.rs  sacn.rs  storage.rs  wifi.rs
