[package]
edition      = "2024"
name         = "brain"
rust-version = "1.96"
version      = "0.1.0"

[dependencies]
alsa = "0.11.0"
embassy-executor = { version = "0.10.0", features = ["executor-thread", "platform-std"] }
embassy-time     = { version = "0.5.0",  features = ["std"] }
hound = "3.5.1"
rusb = "0.9.4"
