[package]
edition      = "2024"
name         = "brain"
rust-version = "1.96"
version      = "0.1.0"

[dependencies]
alsa = "0.11.0"
arc-swap = "1.7"
arrow = "56"
chrono = "0.4"
signal-hook = "0.3"
embassy-executor = { version = "0.10.0", features = ["executor-thread", "platform-std"] }
embassy-time     = { version = "0.5.0",  features = ["std"] }
parquet = "56"
rusb = "0.9.4"
rustfft = "6.2"
