[package]
edition      = "2024"
name         = "ponytail"
rust-version = "1.95"
version      = "0.1.0"

[dependencies]
esp-hal             = { version = "~1.1.0", features = ["esp32s3", "unstable"] }
esp-rtos            = { version = "0.3.0", features = ["embassy", "esp-alloc", "esp-radio", "esp32s3"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
esp-radio           = { version = "0.18.0", features = ["esp-alloc", "esp32s3", "unstable", "wifi"] }
esp-storage         = { version = "0.9.0", features = ["esp32s3"] }
esp-alloc           = "0.10.0"

embassy-executor = "0.10.0"
embassy-futures  = "0.1.0"
embassy-sync     = "0.8.0"
embassy-net      = { version = "0.9.1", features = [
  "dhcpv4",
  "medium-ethernet",
  "multicast",
  "tcp",
  "udp",
  "auto-icmp-echo-reply",
] }
embassy-time     = "0.5.0"

critical-section = "1.2.0"
embedded-hal     = "1"
embedded-storage = "0.3"
rtt-target       = "0.6.2"
static_cell      = "2.1.1"
picoserve        = { version = "0.18.0", features = ["embassy", "alloc"] }
serde            = { version = "1", default-features = false, features = ["derive", "alloc"] }


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
